djangoapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: djangoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec: 
  ingressClassName: nginx
  rules:
    - host: star-burger.test
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: djangoapp-svc
                port:
                  number: 80
